tests/ui/unnamed-enum-variants/unimplemented.stderr
error: unnamed enum variants are not yet implemented
  --> $DIR/unimplemented.rs:7:5
   |
LL |     _ = 1,
   |     ^^^^^

error: aborting due to 1 previous error

